# gmind

./: .gitignore  README.md  debug.bat  start.bat  start.bat.lnk
.claude/: settings.json
.gigaide/: gigaide.properties
.github/workflows/: build.yml
.obsidian/: workspace.json
gmind/: .gitignore  AGENTS.md  COMPONENTS.md  Makefile  PLANS.md  build-release.bat  dev-desktop.bat  docker-compose.yml  run.bat  run.bat.lnk
gmind/.claude/: settings.json
gmind/backend/: .dockerignore  .env.example  .gitignore  .golangci.yml  Dockerfile  agent-prompts.example.json  go.mod  go.sum  restart_server.bat  start_hidden.vbs
gmind/frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
gmind/frontend/src-tauri/: Cargo.toml  tauri.conf.json
gmind/frontend/src-tauri/capabilities/: default.json
gmind/frontend/src-tauri/src/: lib.rs  main.rs
gmind/lumen/: README.md  SKILL.md  colors_and_type.css
gmind/scripts/: build-sidecar.bat  build.ps1  clean.ps1  lint.ps1  reset.ps1  start.ps1
gmind/skills/: access-control.md  agent-system.md  ai-agents.md  api-typing.md  auto-save-indicator.md  auto-update.md  code-splitting.md  collaboration.md  desktop-tauri.md  docker.md  drag-to-inbox.md  error-handling.md  export-import.md  floating-notes-mode.md  graph-relationships.md  lumen-design.md  lumen-migration.md  lumen-neumorphism.md  masys-integration.md  memory-visualization.md  model-servers.md  modular-architecture.md  (+8 more)
scripts/: tauri-dev.bat
wikiAlgoritm/: AGENTS.md
(+307 files in other folders)
