[package]
name = "gmind"
version = "1.0.0"
edition = "2021"

[lib]
name = "gmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = { version = "2", features = [] }
tauri-plugin-shell = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-stronghold = { version = "2", features = [] }
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
